# ensety_gui

./: .gitignore  figma link.txt
copier/: BackupManager.cpp  BackupManager.h  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Copier.cpp  Copier.h  InputParser.cpp  InputParser.h  Program.cpp  Program.h  SmallProfiler.cpp  SmallProfiler.h  ThreadPool.cpp  ThreadPool.h  ThreadsafeQueue.h  Timer.cpp  Timer.h  config.json  main.cpp
copier/util/: SpdlogWrapper.cpp  SpdlogWrapper.h  Utils.cpp  Utils.h
gui_flutter/: README.md  pubspec.yaml
gui_flutter/android/app/: build.gradle
gui_flutter/android/app/src/main/: AndroidManifest.xml
gui_flutter/android/app/src/main/kotlin/com/example/ensety_windows_test/: MainActivity.kt
gui_flutter/android/app/src/profile/: AndroidManifest.xml
gui_flutter/ios/Runner/: Info.plist
gui_flutter/ios/Runner.xcodeproj/: project.pbxproj
gui_flutter/lib/: main.dart  new_task_dialog.dart
gui_flutter/lib/l10n/: app_en.arb  app_ru.arb
gui_flutter/lib/providers/: backups.dart  jobs.dart  theme_model.dart
gui_flutter/lib/screens/: backup_log_screen.dart  settings_screen.dart  tasks_screen.dart
gui_flutter/test/: widget_test.dart
gui_flutter/web/: index.html  manifest.json
gui_flutter/windows/: CMakeLists.txt
gui_flutter/windows/runner/: Runner.rc  main.cpp
